# infernis

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  infernis.code-workspace  pyproject.toml  railway.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_forecast_predictions.py  004_add_key_preview_column.py  006_add_shap_values_column.py  007_add_fire_statistics_table.py
brand/: BRAND.md
docs/: API_REFERENCE.md  HOW_IT_WORKS.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  WHITE_PAPER.md
models/: feature_importance.json  shap_importance.json  training_metrics.json
scripts/: backtest.py  calibrate_bec.py  dev_setup.sh  generate_grid.py  train.py  train_heatmap.py
scripts/download/: 01_era5.py  02_gee_satellite.py  17_dem.py  (+20 more)
tests/: conftest.py  test_alerts.py  test_api.py  test_auth.py  test_backtester.py  test_batch.py  test_bec_zone_names.py  test_c_haines.py  test_cache.py  test_daily_pipeline.py  test_data_processor.py  test_diurnal_ffmc.py  test_enums.py  test_evaluator.py  test_explain_api.py  test_explainability.py  test_fbp_service.py  test_feature_builder.py  test_fire_statistics.py  test_fire_stats_pipeline.py  test_fires.py  test_forecast_pipeline.py  test_fwi_service.py  test_fwi_validation.py  test_grid_generator.py  test_grid_initializer.py  test_grid_vectorized.py  test_heatmap.py  test_history.py  test_lightning.py  test_profile_api.py  test_quantile_trainer.py  test_risk_fuser.py  test_schemas.py  test_smoke.py  test_tiles.py  test_trainer.py
(+50 files in other folders)
